--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">UFO Sightings
+          <a class="navbar-brand" href="index.html">UFO sightings
             <img class="nav-ufo" src="static/images/ufo.svg">
           </a>
         </div>
       </div>
     </nav>
     <div class="hero text-center">
-      <h1>UFO Sightings</h1>
+      <h1>UFO sightings</h1>
       <p>The Truth is Out There</p>
     </div>
     <div class="container">
@@ -36,7 +36,7 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
+                        <label for="date">Enter a date</label>
                         <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
                       </li>
                     </ul>
